# zint-os2

./: CHANGES-OS2.txt  README-OS2.txt  data.db
backend/: CMakeLists.txt  zint.h
frontend/: CMakeLists.txt  zint-os2.rc
frontend_qt/: CMakeLists.txt
frontend_qt/res/: qtzint-os2.rc
